# ConvolutedPneumoniaDetection

./: .gitignore  ConvolutedPneumoniaDetection.ipynb  README.md  pyproject.toml
notebooks/: notebook.ipynb
